MTDSA-20366: Added feature switched OAS documentation and updated income source to business id

--- a/resources/public/api/conf/1.0/application.yaml
+++ b/resources/public/api/conf/1.0/application.yaml
@@ -53,3 +53,7 @@ paths:
     $ref: "./list.yaml"
   /individuals/business/details/{nino}/{businessId}:
     $ref: "./retrieve.yaml"
+# {{#if (enabled 'endpoint-2089')}}
+  /individuals/business/details/{nino}/{businessId}/{taxYear}:
+    $ref: "./quarterly_period_type_create_amend.yaml"
+# {{/if}}
