--- a/resources/public/api/conf/1.0/common/pathParameters.yaml
+++ b/resources/public/api/conf/1.0/common/pathParameters.yaml
@@ -19,3 +19,13 @@ components:
         pattern: ^X[A-Z0-9]{1}IS[0-9]{11}$
         example: XAIS12345678910
       required: true
+    taxYear:
+      name: taxYear
+      in: path
+      description: |
+        The tax year for which a quarterly period type is being set.
+      schema:
+        type: string
+        pattern: ^2[0-9]{3}-[0-9]{2}$
+        example: "2023-24"
+      required: true
