MTDSA-20366: Create #2089 for Business Details API - Implementation (#134)
* MTDSA-20366: Created Models

* MTDSA-20366: Added new Models and Validator Factory

* MTDSA-20366: Implemented Connector

* MTDSA-20366: Added Mock Connector

* MTDSA-20366: Implemented Service, ServiceSpec and MockService

* MTDSA-20366: Implemented Controller and ControllerSpec

* MTDSA-20366: Added ISpec

* MTDSA-20366: Added feature switched OAS documentation and updated income source to business id

* MTDSA-20366: Implemented platops comment

* MTDSA-20366

* MTDSA-20366

* MTDSA-20366

--- a/resources/public/api/conf/1.0/common/errors.yaml
+++ b/resources/public/api/conf/1.0/common/errors.yaml
@@ -17,6 +17,34 @@ components:
         code: FORMAT_BUSINESS_ID
         message: The provided Business ID is invalid
 
+    formatTaxYear:
+      description: |
+        The format of the supplied taxYear value is not valid.
+      value:
+        code: FORMAT_TAX_YEAR
+        message: The provided tax year is invalid
+
+    ruleBusinessIdStateConflict:
+      description: |
+        The request conflicts with the current state of the business ID.
+      value:
+        code: RULE_BUSINESS_ID_STATE_CONFLICT
+        message: The request conflicts with the current state of the business ID
+
+    ruleQuarterlyPeriodUpdating:
+      description: |
+        Quarterly period type cannot be changed for the current year as the business is treated as commencing in the following year.
+      value:
+        code: RULE_QUARTERLY_PERIOD_UPDATING
+        message: Quarterly period type cannot be changed for the current year as the business is treated as commencing in the following year
+
+    ruleIncorrectOrEmptyBodySubmitted:
+      description: |
+        An empty or non-matching body was submitted.
+      value:
+        code: RULE_INCORRECT_OR_EMPTY_BODY_SUBMITTED
+        message: An empty or non-matching body was submitted
+
     ruleIncorrectGovTestScenario:
       description: |
         The request did not match any available Sandbox data. Check that the supplied Gov-Test-Scenario is correct for 
@@ -49,3 +77,10 @@ components:
       value:
         code: NO_BUSINESS_FOUND
         message: No business found for given NINO and Business ID
+
+    ruleBusinessIdNotFound:
+      description: |
+        The business ID provided is not found.
+      value:
+        code: RULE_BUSINESS_ID_NOT_FOUND
+        message: The business ID provided is not found
