MTDSA-20735: added scp005a_QuarterlyTypeChoice feature switch

--- a/conf/application.conf
+++ b/conf/application.conf
@@ -132,6 +132,11 @@ feature-switch {
      enabled = true
      released-in-production = false
   }
+
+  scp005a_QuarterlyTypeChoice {
+     enabled = true
+     released-in-production = false
+  }
 }
 
 # Microservice specific config
