--- a/resources/public/api/conf/1.0/quarterly_period_type_create_amend.yaml
+++ b/resources/public/api/conf/1.0/quarterly_period_type_create_amend.yaml
@@ -1,9 +1,12 @@
 put:
-  summary: Create and Amend Quarterly Period Type for a Business{{#unless (releasedInProduction 'endpoint-2089')}} [Test only]{{/unless}}
+  summary: Create and Amend Quarterly Period Type for a Business
   description: |
     This endpoint enables you to create and amend the type of quarterly reporting period used for a business for a specific tax year.
     You can choose standard quarterly periods (where the first period is 6 April to 5 July) or calendar quarterly periods (first period 1 April to 30 June) for each tax year.
     Note that the quarterly period type cannot be changed after a submission is made for that year.
+    
+    **Warning:** If an invalid tax year or invalid business ID is submitted, the service will return an HTTP 500 INTERNAL_SERVER_ERROR response. Only the current tax year is allowed and business IDs must relate to a self-employment or property income source. This is a known issue and will be fixed to return an appropriate error in a future release.
+    
     
     ### Test data
     Scenario simulation using Gov-Test-Scenario headers is only available in the sandbox environment.    
