MTDSA-24955 EMA secondary agents support (#149)
* MTDSA-24955 EMA secondary agents support - in progress

* MTDSA-24955 EMA secondary agents support

* MTDSA-24955 EMA secondary agents support

* MTDSA-24955 EMA secondary agents support

* MTDSA-24955 EMA secondary agents support

* MTDSA-24955 EMA secondary agents support

--- a/conf/application.conf
+++ b/conf/application.conf
@@ -85,6 +85,13 @@ api {
     auth-validation.enabled = true
   }
 
+  supporting-agent-endpoints {
+    list-all-businesses = true
+    retrieve-business-details = true
+    create-amend-quarterly-period-type = false
+  }
+
+
   # The context which the API will have via the API Platform http://API_GATEWAY/{api.gateway.context}/
   gateway.context = "individuals/business/details"
 }
@@ -118,6 +125,12 @@ feature-switch {
      enabled = true
      released-in-production = false
   }
+
+  supporting-agents-access-control {
+     enabled = true
+     released-in-production = false
+  }
+
 }
 
 # Microservice specific config
