--- a/resources/public/api/conf/1.0/quarterly_period_type_create_amend.yaml
+++ b/resources/public/api/conf/1.0/quarterly_period_type_create_amend.yaml
@@ -48,6 +48,12 @@ put:
       headers:
         X-CorrelationId:
           $ref: './common/headers.yaml#/components/parameters/correlationId'
+        Deprecation:
+          $ref: ./common/headers.yaml#/components/parameters/deprecationHeader
+        Sunset:
+          $ref: ./common/headers.yaml#/components/parameters/sunsetHeader
+        Link:
+          $ref: ./common/headers.yaml#/components/parameters/linkHeader
       content: { }
 
     "400":
