MTDSA-26698:  Update #2089 to Allow Supporting Agents - Implementation

--- a/conf/application.conf
+++ b/conf/application.conf
@@ -88,7 +88,7 @@ api {
   supporting-agent-endpoints {
     list-all-businesses = true
     retrieve-business-details = true
-    create-amend-quarterly-period-type = false
+    create-amend-quarterly-period-type = true
   }
 
 
