MTDSA-27502: Updated OAS to add accountingPeriods Note

--- a/resources/public/api/conf/1.0/application.yaml
+++ b/resources/public/api/conf/1.0/application.yaml
@@ -8,6 +8,8 @@ info:
     * Retrieve Business Details
     * List All Businesses
     
+    **Some of the endpoints in this API return accounting period start and end dates. These should not be displayed to users of your software and will be removed in a future update.**
+    
     # Send fraud prevention data
     HMRC monitors transactions to help protect your customers' confidential data from criminals and fraudsters. 
 
