[MTDSA-28952] Align error response headers with success response headers

--- a/resources/public/api/conf/1.0/retrieve.yaml
+++ b/resources/public/api/conf/1.0/retrieve.yaml
@@ -52,6 +52,15 @@ get:
                 $ref: './examples/retrieveBusinessDetails/response.json'
     "400":
       description: Bad request
+      headers:
+        X-CorrelationId:
+          $ref: './common/headers.yaml#/components/parameters/correlationId'
+        Deprecation:
+          $ref: ./common/headers.yaml#/components/parameters/deprecationHeader
+        Sunset:
+          $ref: ./common/headers.yaml#/components/parameters/sunsetHeader
+        Link:
+          $ref: ./common/headers.yaml#/components/parameters/linkHeader
       content:
         application/json:
           schema:
@@ -66,6 +75,15 @@ get:
 
     "403":
       description: Forbidden
+      headers:
+        X-CorrelationId:
+          $ref: './common/headers.yaml#/components/parameters/correlationId'
+        Deprecation:
+          $ref: ./common/headers.yaml#/components/parameters/deprecationHeader
+        Sunset:
+          $ref: ./common/headers.yaml#/components/parameters/sunsetHeader
+        Link:
+          $ref: ./common/headers.yaml#/components/parameters/linkHeader
       content:
         application/json:
           schema:
@@ -76,6 +94,15 @@ get:
 
     "404":
       description: Not Found
+      headers:
+        X-CorrelationId:
+          $ref: './common/headers.yaml#/components/parameters/correlationId'
+        Deprecation:
+          $ref: ./common/headers.yaml#/components/parameters/deprecationHeader
+        Sunset:
+          $ref: ./common/headers.yaml#/components/parameters/sunsetHeader
+        Link:
+          $ref: ./common/headers.yaml#/components/parameters/linkHeader
       content:
         application/json:
           schema:
