Create business details V2

--- a/conf/application.conf
+++ b/conf/application.conf
@@ -79,6 +79,14 @@ api {
     }
   }
 
+  2.0 {
+    status = "BETA"
+    endpoints {
+        enabled = true
+        api-released-in-production = true
+    }
+  }
+
   confidence-level-check {
     confidence-level = 250
     definition.enabled = true
