MTDSA-29422: Updated createAmendQuarterlyPeriodType to return RuleRequstCannotBeFulfilledError

--- a/conf/application.conf
+++ b/conf/application.conf
@@ -76,6 +76,7 @@ api {
     endpoints {
         enabled = true
         api-released-in-production = true
+        allow-request-cannot-be-fulfilled-header = false
     }
   }
 
@@ -84,6 +85,7 @@ api {
     endpoints {
         enabled = true
         api-released-in-production = true
+        allow-request-cannot-be-fulfilled-header = true
     }
   }
 
