[MTDSA-29706] API#1171 HIP Migration

--- a/conf/application.conf
+++ b/conf/application.conf
@@ -141,6 +141,11 @@ feature-switch {
      released-in-production = false
   }
 
+  ifs_hip_migration_1171 {
+    enabled = true
+    released-in-production = false
+  }
+
 }
 
 # Microservice specific config
@@ -173,6 +178,14 @@ microservice {
       env = Prod
       token = ABCD1234
       environmentHeaders = ["Accept", "Gov-Test-Scenario", "Content-Type", "Location", "X-Request-Timestamp", "X-Session-Id", "X-Request-Id"]
+    }
+
+    hip {
+      host = 127.0.0.1
+      port = 9772
+      env = Prod
+      token = ABCD1234
+      environmentHeaders = ["Accept", "Gov-Test-Scenario", "Content-Type", "Location", "X-Message-Type", "X-Originating-System", "X-Receipt-Date", "X-Regime-Type", "X-Request-Id", "X-Request-Timestamp", "X-Session-Id", "X-Transmitting-System"]
     }
 
     api2089 {
