[MTDSA-29706] API#1171 HIP Migration (#167)
* [MTDSA-29706] API#1171 HIP Migration

* MTDSA-29706 Fix issues + improvements & cleanup

---------

Co-authored-by: “Taiwo-AB” <63714619+Taiwo-AB@users.noreply.github.com>

--- a/conf/application.conf
+++ b/conf/application.conf
@@ -1,4 +1,4 @@
-# Copyright 2023 HM Revenue & Customs
+# Copyright 2025 HM Revenue & Customs
 #
 # Licensed under the Apache License, Version 2.0 (the "License");
 # you may not use this file except in compliance with the License.
@@ -61,7 +61,6 @@ play.http.errorHandler = "utils.ErrorHandler"
 # Additional play modules can be added here
 play.modules.enabled += "uk.gov.hmrc.play.bootstrap.HttpClientModule"
 play.modules.enabled += "uk.gov.hmrc.play.bootstrap.AuthModule"
-play.modules.enabled += "config.DIModule"
 
 # Evolutions
 # ~~~~~
@@ -126,11 +125,6 @@ feature-switch {
     released-in-production = false
   }
 
-  endpoint-2089 {
-     enabled = true
-     released-in-production = false
-  }
-
   scp005a_QuarterlyTypeChoice {
      enabled = true
      released-in-production = false
@@ -141,6 +135,7 @@ feature-switch {
      released-in-production = false
   }
 
+  ifs_hip_migration_1171.enabled = true
 }
 
 # Microservice specific config
@@ -175,12 +170,13 @@ microservice {
       environmentHeaders = ["Accept", "Gov-Test-Scenario", "Content-Type", "Location", "X-Request-Timestamp", "X-Session-Id", "X-Request-Id"]
     }
 
-    api2089 {
+    hip {
       host = 127.0.0.1
       port = 9772
       env = Prod
-      token = ABCD1234
-      environmentHeaders = ["Accept", "Gov-Test-Scenario", "Content-Type", "Location", "X-Request-Timestamp", "X-Session-Id", "X-Request-Id"]
+      clientId = "someClientId"
+      clientSecret = "someClientSecret"
+      environmentHeaders = ["Accept", "Gov-Test-Scenario", "Location", "X-Request-Timestamp", "X-Session-Id", "X-Request-Id"]
     }
   }
 }
