--- a/conf/application.conf
+++ b/conf/application.conf
@@ -170,6 +170,14 @@ microservice {
       environmentHeaders = ["Accept", "Gov-Test-Scenario", "Content-Type", "Location", "X-Request-Timestamp", "X-Session-Id", "X-Request-Id"]
     }
 
+    api2089 {
+      host = 127.0.0.1
+      port = 9772
+      env = Prod
+      token = ABCD1234
+      environmentHeaders = ["Accept", "Gov-Test-Scenario", "Content-Type", "Location", "X-Request-Timestamp", "X-Session-Id", "X-Request-Id"]
+    }
+
     hip {
       host = 127.0.0.1
       port = 9772
