--- a/resources/public/api/conf/2.0/common/pathParameters.yaml
+++ b/resources/public/api/conf/2.0/common/pathParameters.yaml
@@ -13,7 +13,8 @@ components:
       name: businessId
       in: path
       description: |
-        An identifier for the business, unique to the customer.<p>Must conform to the regular expression `^X[A-Z0-9]{1}IS[0-9]{11}$`
+        A unique identifier for the business income source. It must conform to the following regex: ^X[a-zA-Z0-9]{1}IS[0-9]{11}$
+        In Sandbox, use the following business IDs when testing: XAIS12345678901
       schema:
         type: string
         pattern: ^X[A-Z0-9]{1}IS[0-9]{11}$
@@ -23,7 +24,9 @@ components:
       name: taxYear
       in: path
       description: |
-        The tax year the data applies to, for example, 2021-22. The start year and end year must not span two tax years. The minimum tax year is 2025-26. No gaps are allowed, for example, 2025-27 is not valid. (The minimum tax year in Sandbox is 2024-25.)
+        The tax year the data applies to, for example, 2021-22. The start year and end year must not span two tax years. 
+        The minimum tax year is 2025-26. No gaps are allowed, for example, 2025-27 is not valid. (The minimum tax year in Sandbox is 2024-25.)
+        For example: 2025-26
       schema:
         type: string
         pattern: ^2[0-9]{3}-[0-9]{2}$
