Update Accounting Type validation

--- a/conf/application.conf
+++ b/conf/application.conf
@@ -138,6 +138,10 @@ feature-switch {
   ifs_hip_migration_1171.enabled = true
 }
 
+# Tax year config
+
+updateAccountingTypeMinimumTaxYear = 2025
+
 # Microservice specific config
 
 microservice {
