MTDSA-30242: OAS Added for update accounting

--- a/resources/public/api/conf/2.0/common/errors.yaml
+++ b/resources/public/api/conf/2.0/common/errors.yaml
@@ -94,7 +94,7 @@ components:
 
     notFound:
       description: |
-        The supplied income source could not be found.
+        The matching resource is not found.
       value:
         code: MATCHING_RESOURCE_NOT_FOUND
         message: Matching resource not found
