--- a/resources/public/api/conf/2.0/update_accounting_type.yaml
+++ b/resources/public/api/conf/2.0/update_accounting_type.yaml
@@ -23,8 +23,8 @@ parameters:
   - $ref: './common/headers.yaml#/components/parameters/authorization'
   - $ref: './common/headers.yaml#/components/parameters/testScenarioHeader'
 
-
-
+tags:
+  - Accounting Type
 
 security:
   - User-Restricted:
