--- a/resources/public/api/conf/2.0/retrieve_periods_of_account.yaml
+++ b/resources/public/api/conf/2.0/retrieve_periods_of_account.yaml
@@ -22,7 +22,7 @@ parameters:
   - $ref: './common/headers.yaml#/components/parameters/testScenarioHeader'
 
 tags:
-  - Periods Of Account
+  - Periods of Account
 
 security:
   - User-Restricted:
