MTDSA-30242: OAS Added for update accounting type

--- a/resources/public/api/conf/2.0/update_accounting_type.yaml
+++ b/resources/public/api/conf/2.0/update_accounting_type.yaml
@@ -10,7 +10,7 @@ description: |
   | N/A - DEFAULT                            | Simulate a successful response with a self-employment business. <br/> Use the following businessId for this scenario: <br/> - XBIS12345678901 |
   | NOT_FOUND                                | Simulate a scenario where no data is found.                                                                                                   |
   | OUTSIDE_AMENDMENT_WINDOW                 | Simulates the scenario where request cannot be completed as it is outside the amendment window.                                               |
-  | STATEFUL                                 | Performs a stateful retrieve.                                                                                                                 |
+  | STATEFUL                                 | Performs a stateful update.                                                                                                                 |
 
 
 
@@ -54,6 +54,7 @@ responses:
       Link:
         $ref: ./common/headers.yaml#/components/parameters/linkHeader
     content: { }
+
   "400":
     description: Bad request
     headers:
@@ -87,6 +88,24 @@ responses:
           RULE_TAX_YEAR_NOT_SUPPORTED:
             $ref: './common/errors.yaml#/components/examples/ruleTaxYearNotSupported'
 
+  "403":
+    description: Not Found
+    headers:
+      X-CorrelationId:
+        $ref: './common/headers.yaml#/components/parameters/correlationId'
+      Deprecation:
+        $ref: ./common/headers.yaml#/components/parameters/deprecationHeader
+      Sunset:
+        $ref: ./common/headers.yaml#/components/parameters/sunsetHeader
+      Link:
+        $ref: ./common/headers.yaml#/components/parameters/linkHeader
+    content:
+      application/json:
+        schema:
+          $ref: './schemas/error-response.yaml'
+        examples:
+          CLIENT_OR_AGENT_NOT_AUTHORISED:
+            $ref: './common/errors.yaml#/components/examples/clientOrAgentNotAuthorised'
 
   "404":
     description: Not Found
