--- a/conf/application.conf
+++ b/conf/application.conf
@@ -98,6 +98,7 @@ api {
     list-all-businesses = true
     retrieve-business-details = true
     create-amend-quarterly-period-type = true
+    update-accounting-type = false # check if supporting agents are allowed
   }
 
 
