Retrieve Periods Of Account OAS
# Conflicts:
#	resources/public/api/conf/2.0/accounting_type.yaml
#	resources/public/api/conf/2.0/common/pathParameters.yaml
#	resources/public/api/conf/2.0/retrieve_accounting_type.yaml
#	resources/public/api/conf/2.0/update_accounting_type.yaml

--- a/resources/public/api/conf/2.0/application.yaml
+++ b/resources/public/api/conf/2.0/application.yaml
@@ -63,5 +63,7 @@ paths:
     $ref: "./quarterly_period_type_create_amend.yaml"
   /individuals/business/details/{nino}/{businessId}/{taxYear}/accounting-type:
     $ref: "./accounting_type.yaml"
+  /individuals/business/details/{nino}/{businessId}/{taxYear}/periods-of-account:
+    $ref: "./periods_of_account.yaml"
 
 
